# mi-saina

./: .env.example  .gitignore  CHANGELOG.md  README.fr.md  README.md  README.mg.md  build-run.sh  import_lmstudio.sh  install.sh  start.sh
backend/: config.py  fibonacci  main.py  pytest.ini  requirements.txt
backend/routers/: chat.py  config_router.py  health.py  memory.py  models.py  rag.py  schedule.py  search.py  shell.py  update.py
backend/services/: apps.py  config_map.py  diagnostics.py  documents.py  health_monitor.py  llm.py  machine_profile.py  mcp_client.py  memory.py  planner.py  prompt_normalizer.py  rag.py  scheduler.py  shell_exec.py  shell_stream.py  sysinfo.py  task_classifier.py  userctx.py  web_search.py
backend/test/: fibonacci.c
backend/tests/: conftest.py  test_chat_confirm.py  test_chat_helpers.py  test_chat_sudo.py  test_config.py  test_config_map.py  test_diagnostics.py  test_documents.py  test_health_monitor.py  test_llm.py  test_machine_profile.py  test_mcp_client.py  test_mcp_parse.py  test_memory.py  test_num_ctx.py  test_origin_security.py  test_planner.py  test_planner_refs.py  test_prompt_normalizer.py  (+10 more)
config/: mcp.json.example  system_prompt.txt
docs/: audit_9b_limitations.md  improvement_report.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
packaging/: setup.sh  uninstall.sh
(+37 files in other folders)
